--- a/menu.htm
+++ b/menu.htm
@@ -20,6 +20,6 @@
 <br><br>
 <A HREF="./jsp/Theme.jsp" TARGET="main">Table des thémes themes</A>
 <br><br>
-<BR><BR><BR><BR>Seule l'administration permet de voir les news offline.
+<BR><BR><BR><BR>Under Maintenance.
 </body>
 </html>
