--- a/menu.htm
+++ b/menu.htm
@@ -2,7 +2,7 @@
 <html>
 <!-- Date de création: 16/07/02 -->
 <body bgcolor="#000000" text="#ffffff" link="#ffff00" vlink="#dddd00" alink="#ff0000">
-<title>Chapitre 7 : Exemple de l'application de news</title>
+<title>Chapitre 7 : Example of news application</title>
 
 <CENTER><B><U>MENU</U><B></CENTER>
 <BR><BR>
